--- a/package.json
+++ b/package.json
@@ -1,34 +1,40 @@
 {
-  "name": "sofavue",
-  "version": "0.0.0",
+  "name": "sofasite",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview --port 5050",
-    "typecheck": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@azure/core-http": "1.1.8",
+    "@azure/msal-browser": "^2.3.1",
+    "@azure/storage-blob": "12.2.1",
+    "@themesberg/flowbite": "^1.3.0",
     "axios": "^0.26.1",
-    "pinia": "^2.0.13",
-    "vue": "^3.2.31",
-    "vue-router": "^4.0.14"
+    "core-js": "^3.8.3",
+    "tiny-emitter": "^2.1.0",
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.3",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.0",
-    "@types/node": "^16.11.26",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^10.0.0",
-    "@vue/tsconfig": "^0.1.3",
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "@vue/eslint-config-standard": "^6.1.0",
     "autoprefixer": "^10.4.4",
-    "eslint": "^8.5.0",
-    "eslint-plugin-vue": "^8.2.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.4.12",
-    "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.23",
-    "typescript": "~4.6.3",
-    "vite": "^2.9.1",
-    "vue-tsc": "^0.33.9"
+    "tailwindcss": "^3.0.24"
   }
 }
