--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tiny-emitter": "^2.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue-universal-modal": "^1.1.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
